refactor structure and naming across Confluence scan flow and reporting: replace `ConfluenceScanSpaceStatus` with `ConfluenceSpaceScanState`, remove unused methods, simplify interfaces, and refine scheduling logic.